--- a/sellit/src/main/resources/application.properties
+++ b/sellit/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:h2:mem:AZ;
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+spring.jpa.hibernate.ddl-auto=none
